[package]
name = "coroutine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
async-h1 = "2.3.2"
http-types = "2.12.0"
async-tls = { version = "0.11.0", default-features = false, features = ["client"] }

